--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,8 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
+        <item name="android:editTextBackground">@android:color/transparent</item>
+        <item name="android:autofilledHighlight">@drawable/autofill_highlight</item>
     </style>
 
     <style name="BootSplashTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
